# any-video

./: .gitignore  CLAUDE.md  PRD.md  README.md  any_video.py  improvements.md  pyproject.toml  server.py
.claude/quality/: fix-plan.md  last-assessment.md
.github/workflows/: ci.yml
any_video/: __init__.py  __main__.py  anthropic_client.py  cli.py  config.py  downloader.py  exceptions.py  openai_client.py  pipeline.py  transcriber.py
extension/: manifest.json  popup.html  popup.js  styles.css
tests/: test_anthropic_client.py  test_any_video.py  test_cli.py  test_config.py  test_downloader.py  test_openai_client.py  test_pipeline.py  test_server.py  test_transcriber.py
