[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "any-video"
version = "2.0.0"
description = "CLI tool to download YouTube videos, transcribe with Whisper, and generate learning materials via GPT"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20240930,<20260000",
    "openai>=1.0,<3",
    "yt-dlp>=2024.0,<2027",
]

[project.scripts]
any-video = "any_video.cli:main"

[project.optional-dependencies]
server = [
    "flask>=3.0,<4",
    "flask-cors>=5.0,<6",
    "flask-limiter>=3.0,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
