[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "any-video"
version = "2.0.0"
description = "CLI tool to download YouTube videos, transcribe with Whisper, and generate learning materials via Claude"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0,<2",
    "anthropic>=0.80,<1",
    "yt-dlp>=2024.0,<2027",
    "tqdm>=4.66,<5",
    "truststore>=0.10,<1",
]

[project.scripts]
any-video = "any_video.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
